BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithoutProfilesXLation/src/objects/EM_Event_History_vod__c.object
<CustomObject>
    <fields>
        <fullName>Activity_ID_HCPTS__c</fullName>
        <formula>Event_vod__r.Activity_ID_2_HCPTS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Name_HCPTS__c</fullName>
        <formula>Event_vod__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ending_Status_Simple_HCPTS__c</fullName>
        <description>Picklist value to translate</description>
        <inlineHelpText>Picklist value to translate</inlineHelpText>
        <label>Ending Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_Approval_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Event-PostApproval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Service Coordinator Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Business Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Post-Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Closeout</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event an Event History record is associated to.</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipName>EM_Event_History_Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Starting_Status_Simple_HCPTS__c</fullName>
        <description>Picklist Values to translate</description>
        <label>Starting Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_Approval_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Event-PostApproval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Service Coordinator Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Business Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Post-Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Closeout</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>